--- a/main.html
+++ b/main.html
@@ -9,29 +9,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+	<div id="carouselExampleControls myCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item active first-slide">
       <img src="..." class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item second-slide">
       <img src="..." class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item third-slide">
       <img src="..." class="d-block w-100" alt="...">
     </div>
-	  <div class="carousel-item">
+	  <div class="carousel-item fourth-slide">
       <img src="..." class="d-block w-100" alt="...">
     </div>
-	  <div class="carousel-item">
+	  <div class="carousel-item fifth-slide">
       <img src="..." class="d-block w-100" alt="...">
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+  <button class="carousel-control-prev glyphicon-chevron-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+  <button class="carousel-control-next glyphicon-chevron-right" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
