--- a/main.html
+++ b/main.html
@@ -12,19 +12,19 @@
 	<div id="carouselExampleControls myCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active first-slide">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item second-slide">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item third-slide">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
 	  <div class="carousel-item fourth-slide">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
 	  <div class="carousel-item fifth-slide">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev glyphicon-chevron-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
