--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="carouselExampleControls myCarousel" class="carousel slide" data-bs-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active first-slide">
       <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
@@ -27,11 +27,11 @@
       <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
   </div>
-  <button class="carousel-control-prev glyphicon-chevron-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+  <button class=" left carousel-control-prev glyphicon-chevron-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next glyphicon-chevron-right" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+  <button class=" right carousel-control-next glyphicon-chevron-right" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
