--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <div class="carousel-item second-slide">
       <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item third-slide">
+    <div class="carousel-item third-slide active">
       <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
 	  <div class="carousel-item fourth-slide">
