--- a/main.html
+++ b/main.html
@@ -27,11 +27,11 @@
       <img src="https://images.pexels.com/photos/16654093/pexels-photo-16654093.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
   </div>
-  <button class=" left carousel-control-prev glyphicon-chevron-left carousel-control" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+  <button class=" left carousel-control-prev glyphicon-chevron-left carousel-control glyphicon" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class=" right carousel-control-next glyphicon-chevron-right carousel-control" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+  <button class=" right carousel-control-next glyphicon-chevron-right carousel-control glyphicon" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
